<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:weightSum="1">

    <EditText
        android:id="@+id/user_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_name_hint"
        android:textSize="13pt"/>

    <EditText
        android:id="@+id/user_avatar_url_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/avatar_url_hint"
        android:textSize="13pt"
        android:inputType="textUri"/>

    <CalendarView
        android:id="@+id/user_date_of_birth_calendar_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/download_user_info_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/download_str"
            style = "?android:borderlessButtonStyle"
            android:textSize="13pt"/>

        <Button
            android:id="@+id/upload_user_info_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/upload_str"
            android:enabled="false"
            style = "?android:borderlessButtonStyle"
            android:textSize="13pt"/>
    </LinearLayout>


</LinearLayout>
